tests/compile_fail/wrong_join_table.stderr
error[E0271]: type mismatch resolving `<AuthorId as ForeignKey<Posts>>::References == Comments`
  --> tests/compile_fail/wrong_join_table.rs:32:10
   |
32 |         .join::<Comments, posts::AuthorId>();
   |          ^^^^ type mismatch resolving `<AuthorId as ForeignKey<Posts>>::References == Comments`
   |
note: expected this to be `Comments`
  --> tests/compile_fail/wrong_join_table.rs:17:19
   |
17 |     #[foreign_key(Users)]
   |                   ^^^^^
note: required by a bound in `sql_builder::join::<impl sql_builder::QueryBuilder<WithColumns<T, Cols>, NotSealed, R>>::join`
  --> src/join.rs
   |
   |     pub fn join<B, FK>(mut self) -> Self
   |            ---- required by a bound in this associated function
...
   |         FK: ForeignKey<T, References = B>,
   |                           ^^^^^^^^^^^^^^ required by this bound in `sql_builder::join::<impl QueryBuilder<WithColumns<T, Cols>, NotSealed, R>>::join`
